salesforce_sfdx/main/default/objects/OSMX_Rango_Consumo__c/OSMX_Rango_Consumo__c.object-meta.xml
<CustomObject>
    <label>OSMX_Rango_Consumo</label>
    <nameField>
        <label>OSMX_Rango_Consumo  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OSMX_Rango_Consumos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>