salesforce_sfdx/main/default/objects/OSMX_Rango_Consumo__c/fields/Rango_consumo__c.field-meta.xml
<CustomField>
    <fullName>Rango_consumo__c</fullName>
    <label>Rango_consumo</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>