salesforce_sfdx/main/default/objects/OSMX_Rango_Consumo__c/fields/Rango_maximo__c.field-meta.xml
<CustomField>
    <fullName>Rango_maximo__c</fullName>
    <label>Rango_maximo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>