salesforce_sfdx/main/default/objects/OSMX_Rango_Consumo__c/fields/RangoConcatenado__c.field-meta.xml
<CustomField>
    <fullName>RangoConcatenado__c</fullName>
    <formula>If(Valor_Gj__c = 161.8278,("PS $" &amp; TEXT(Valor_Gj__c)),If(Valor_Gj__c = 0,("$"&amp; TEXT(Valor_Gj__c)),("Rango " &amp; TEXT(Rango_consumo__c) &amp;" $"&amp; TEXT(Valor_Gj__c))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RangoConcatenado</label>
    <type>Text</type>
</CustomField>