salesforce_sfdx/main/default/objects/OSMX_Rango_Consumo__c/fields/Valor_Gj__c.field-meta.xml
<CustomField>
    <fullName>Valor_Gj__c</fullName>
    <label>Valor_Gj</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>